--- a/index.html
+++ b/index.html
@@ -585,9 +585,9 @@
         <p>
           © 2023 All rights reserved. Designed by
           <a
-            href="https://www.youtube.com/channel/UCiUtBDVaSmMGKxg1HYeK-BQ"
+            href="https://engant.com/"
             target="_blank"
-            >OSC</a
+            >beastaman</a
           >
         </p>
       </div>
